updated photos and fixed alignment

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5,11 +5,11 @@
 
 #home  button.btn-default {
 	background: transparent;
-	border-radius: 5px;
+	border-radius: 0;
 	border-style: solid;
-	border-width: 3px;
-	border-color: blue;
-	color: blue;
+	border-width: 1px;
+	border-color: #7d848e;
+	color: #525a61;
 	margin-bottom: 30px;
 }
 
@@ -73,6 +73,9 @@ body {
 	background-image: url('/assets/background.gif');
 	background-repeat: no-repeat; 
 }
+#top img {
+	margin-left: 35px;
+}
 
 #about {
 	background: #4ba4d0;
@@ -129,6 +132,11 @@ body {
 #footer  {
 	background: #b3b3b3;
 	color: white;
+	padding: 2%;
+}
+
+.img-rounded {
+	margin: auto;
 }
 
 img {
@@ -147,8 +155,8 @@ img {
 }
 
 #tag_line {
-	font-size: 2.25em;
-	color: blue;
+	font-size: 2em;
+	color: #7d848e;
 	padding: 30px;
 }
 
